[package]
name = "kvs"
version = "0.1.0"
authors = ["Matthew Ziter <mziter@fastmail.com>"]
edition = "2018"
description = "An efficient and persistant key value store"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "~0.2.18"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
